--- a/Proyecto Final KL/proyecto_final/css/basic-calculator.css
+++ b/Proyecto Final KL/proyecto_final/css/basic-calculator.css
@@ -1,8 +1,8 @@
 body {
-    font-family: Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     text-align: center;
     padding: 20px;
-    background-color: beige;
+    background-color: rgb(255, 213, 227);
 }
 button {
     display: block;
@@ -13,11 +13,11 @@ button {
     cursor: pointer;
 }
 h1, h2 {
-    color: #1a068d;
+    color: #ff727e;
 }
 
 #calculator{
-    display:none;
+    display:block;
     height:450px;
     width: 450px;
     border-radius: 7px;
@@ -28,8 +28,8 @@ h1, h2 {
 }
 #buttonMenu{
     display: none;
-    background-color: rgb(36, 35, 35) !important;
-    color: white !important;
+    background-color: rgb(255, 125, 155) !important;
+    color: rgb(255, 242, 192) !important;
     border-radius: 5%;
 }
 #calculator form{
@@ -64,10 +64,43 @@ h1, h2 {
     margin-top: 15px;
 }
 #calculator .orange{
-    background-color: rgba(255, 166, 0, 0.836) !important;
+    background-color: rgba(255, 139, 158, 0.836) !important;
     color:white !important;
 }
 #calculator .grey{
-    background-color: rgb(51,51,51) !important;
+    background-color: rgb(255, 179, 203) !important;
     color: white !important;
 }
+a.volver {
+    color: #84507d;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+/*diseño del enlace de las calculadoras*/
+.Calculator {
+    display: block;
+    width: 300px;
+    padding: 15px;
+    margin: 20px auto;
+    text-decoration: none;
+    color: #333;
+    border: 2px solid #cc00ff;
+    border-radius: 10px;
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.Calculator:hover {
+    background-color: #d809a4;
+    color: #fff;
+    border-color: #31032d;
+}
+
+.Calculator .titulo {
+    display: block;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
