--- a/FinalProyect/Proyecto Final KL/css/basic-calculator.css
+++ b/FinalProyect/Proyecto Final KL/css/basic-calculator.css
@@ -97,7 +97,7 @@ a.volver {
     border-color: #31032d;
 }
 
-.Calculator .titulo {
+.Calculator .title {
     display: block;
     font-size: 18px;
     font-weight: bold;
